# OverflowProject

./: .gitignore  CMakeLists.txt  README.md  main.cpp  overflow.db
.github/workflows/: build_app.yml  main.yml  run_server.yml
Parser/lib/JsonReader/src/: JsonReader.cpp
Parser/lib/UrlsReader/: CMakeLists.txt
Parser/lib/UrlsReader/tests/src/: UrlsReader_test.cpp
db/: overflow.db
extra/: database_params.h
lib/Front/: CMakeLists.txt
lib/Front/include/: object_widget.h  searchbox.h  server.h
lib/Front/src/: server.cpp
lib/Front/tests/: CMakeLists.txt
lib/Front/tests/include/: test.h
lib/Front/tests/src/: test.cpp
lib/Parser/: CMakeLists.txt  Read_to_start.txt
lib/Parser/ArgumentsParser/: CMakeLists.txt
lib/Parser/ArgumentsParser/include/: ArgumentsParser.h
lib/Parser/ArgumentsParser/tests/: CMakeLists.txt
lib/Parser/ArgumentsParser/tests/src/: ArgumentsParser_test.cpp
lib/Parser/JsonReader/: CMakeLists.txt
lib/Parser/JsonReader/include/: JsonReader.h
lib/Parser/JsonReader/tests/src/: JsonReader_test.cpp
lib/Parser/UrlsReader/include/: UrlsReader.h
lib/Parser/UrlsReader/src/: UrlsReader.cpp
lib/Parser/lib/ArgumentsParser/: CMakeLists.txt
lib/Parser/lib/ArgumentsParser/include/: ArgumentsParser.h
lib/Parser/lib/ArgumentsParser/src/: ArgumentsParser.cpp
lib/Parser/lib/ArgumentsParser/tests/: CMakeLists.txt
lib/Parser/lib/ArgumentsParser/tests/src/: ArgumentsParser_test.cpp
lib/Parser/lib/JsonReader/: CMakeLists.txt
lib/Parser/lib/JsonReader/tests/src/: JsonReader_test.cpp
lib/Parser/lib/UrlsReader/tests/src/: UrlsReader_test.cpp
lib/Selector/: CMakeLists.txt
lib/Selector/include/: FlatAndTravelTime.h  FlatSelector.h  GetTravelTime.h  ParseJson.h  Selector.h  TravelTimeGetter.h
lib/Selector/src/: FlatSelector.cpp  GetTravelTime.cpp  JsonParser.cpp  ParseJson.cpp  TravelTimeGetter.cpp
lib/UrlsReader/include/: IUrlsReader.h
lib/datalib/: CMakeLists.txt
lib/datalib/include/: database.h  db_config.h  db_exception.h  flat.h  pg_database.h  sqlite_database.h  user.h
lib/datalib/src/: db_exception.cpp  flat.cpp  sqlite_database.cpp
lib/datalib/tests/: CMakeLists.txt
lib/datalib/tests/src/: test_database_params.cpp  test_flat.cpp  test_pg_database.cpp  test_sqlite_database.cpp
lib/newlib/: CMakeLists.txt  library.h
src/: main.cpp
uml/: database.drawio
